Store ExpressionsData and ChangerData directly on the structure rather than the ParserInstance